Use mousedown/touchstart instead of click to speed things up

--- a/light.html
+++ b/light.html
@@ -21,7 +21,8 @@
         mode: 'light'
       });
 
-      $('.content').click(function () {
+      $('.content').on('mousedown touchstart', function (evt) {
+        evt.preventDefault();
         app.click();
       });
     </script>
